# real-estate-dashboard

./: .gitignore  README.md
backend/: CMakeLists.txt  envoy.yaml  real_estate.proto
backend/src/: main.cpp  real_estate.grpc.pb.cc  real_estate.grpc.pb.h  real_estate.pb.cc  real_estate.pb.h  real_estate_service.cpp  real_estate_service.h
frontend/: grpcClient.js  index.html  main.js  style.css
frontend/proto/: real_estate_grpc_web_pb.js  real_estate_pb.js
